Renaming things, properly formatting JSON values, and updating the Swagger document
