# helpers/structs.go
@@ -5,17 +5,17 @@ import "time"
 // Request represents an incoming request body passed via a RESTful POST
 type Request struct {
 	// Required fields
-	DestinationAddress   string // Hostname to be sent the file
-	DestinationDirectory string // Path indicates where to store the file on the server
-	FileLocation         string // Local location of the file to be sent (must be accessible from the server running the service)
-	Filename             string
-	CallbackAddress      string // Complete address to send the notification that the file transfer is complete
+	DestinationAddress   string `json:"destinationAddress"`   // Hostname to be sent the file
+	DestinationDirectory string `json:"destinationDirectory"` // Path indicates where to store the file on the server
+	FileLocation         string `json:"fileLocation"`         // Local location of the file to be sent (must be accessible from the server running the service)
+	Filename             string `json:"filename"`
+	CallbackAddress      string `json:"callbackAddress"` // Complete address to send the notification that the file transfer is complete
 
 	// Optional Fields
-	CallbackIdentifier string // Optional value to be passed in so the requester can identify the host when it's sent back
-	Timeout            int    // Time in seconds to wait for timeout when trying to open an FTP connection (defaults to 30)
-	UsernameFTP        string // Username to authenticate with the device (defaults to anonymous)
-	PasswordFTP        string // Password to authenticate with the device (defaults to anonymous)
+	CallbackIdentifier string `json:"callbackIdentifier,omitempty"` // Optional value to be passed in so the requester can identify the host when it's sent back
+	Timeout            int    `json:"timeout,omitempty"`            // Time in seconds to wait for timeout when trying to open an FTP connection (defaults to 30)
+	UsernameFTP        string `json:"usernameFTP,omitempty"`        // Username to authenticate with the device (defaults to anonymous)
+	PasswordFTP        string `json:"passwordFTP,omitempty"`        // Password to authenticate with the device (defaults to anonymous)
 
 	// Fields not expected in request, will be filled by the service
 	SubmissionTime time.Time // Will be filled by the service to indicate when the file transfer began
